fix: card gap add

--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -89,6 +89,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    gap: 20px;
     .card-medium-1--text{
       padding: 0;
       align-items: center;
